--- a/Proyectsoftware/Views/Home/Index.cshtml
+++ b/Proyectsoftware/Views/Home/Index.cshtml
@@ -4,19 +4,24 @@
 }
 
 
-<dive class="space"></dive>
-    <div class="blurred-box">
-        <div class="user-login-box">
-            <div class="user-icon"></div>
-            <h1 class="user-name">LOGIN</h1>
-            <div class="input-container">
-                <input type="text" name="username" placeholder="Usuario">
-                <input type="password" name="password" placeholder="Contraseña">
-            </div>
-            <a href="/Home/Home">  <button class="login-button">Iniciar Sesión</button></a>
-            <a href="/Home/Register" class="register-link">Aún no tengo una cuenta</a>
-        </div>
-    </div>
+    <dive class="space"></dive>
 
+
+
+<div class="blurred-box">
+    <div class="user-login-box">
+        <div class="user-icon"></div>
+        <h1 class="user-name">LOGIN</h1>
+        <div class="input-container">
+            <input type="text" id="username" name="username" placeholder="Usuario">
+            <div id="username-error" class="error-message"></div>
+
+            <input type="password" id="password" name="password" placeholder="Contraseña">
+            <div id="password-error" class="error-message"></div>
+        </div>
+        <button type="button" onclick="validarCamposLogin()" class="login-button">Iniciar Sesión</button>
+        <a href="/Home/Register" class="register-link">Aún no tengo una cuenta</a>
+    </div>
+</div>
 
 
